Fixed alignment issue with email link

--- a/src/style.css
+++ b/src/style.css
@@ -72,6 +72,8 @@ p {
   color: var(--primary-color);
   font-size: 28px;
   text-decoration: none;
+  display: flex;
+  justify-content: center;
 }
 
 .email-link:hover {
